--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <nav class="navbar navbar-expand-lg navbar-light">
              
                 <a class="navbar-brand" href="#">
-                  <img src="../LaslesVPN/img/Logo.png" alt="Logo" class="header__menu-img">
+                  <img src="img/Logo.png" alt="Logo" class="header__menu-img">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                   aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
